erDiagram
    ObservationEvent {
        guid EventId PK
        string SubjectId FK
        string Activity
        string ClinicalPayload
        string ExtractedClinicalText
        bool IsSignificant
        bool IsOutlier
        string OutlierReason
        datetime ObservedAtUtc
        string ImageReferencePath
        string PartitionKey
        string RowKey
    }

    SubjectProfile {
        string SubjectId PK
        string DisplayName
        datetime FirstSeenUtc
        datetime LastSeenUtc
        string LastActivity
        bool LastActivityIsOutlier
    }

    DailyChapter {
        date Date PK
        string Narrative
    }

    Highlight {
        guid EventId FK
        date ChapterDate FK
        int Rank
    }

    BlobAccessDescriptor {
        string BlobPath PK
        string SasUrl
        datetime ExpiresAtUtc
        string AccessType
    }

    DiagnosticsSnapshot {
        datetime CapturedAtUtc PK
        float CpuPercent
        long MemoryBytes
        long TotalMemoryBytes
        string StorageStatus
        string MaskedConnectionString
        string MaskedAppInsightsKey
    }

    FeatureFlags {
        string Key PK
        bool ObservationLoopEnabled
        bool SaveSignificantImages
        bool TtsAnnouncementsEnabled
        bool ExposeDebugDetailsInUi
        bool DeveloperBypassAuth
    }

    AzureStorageOptions {
        string ConnectionString
        string ObservationsTable
        string SubjectsTable
        string SignificantImagesContainer
    }

    SubjectProfile ||--o{ ObservationEvent : "has (SubjectId FK)"
    DailyChapter ||--o{ ObservationEvent : "timeline (Date = ObservedAtUtc.Date)"
    DailyChapter ||--o{ Highlight : "highlights (top 30 significant)"
    Highlight }|--|| ObservationEvent : "references (EventId FK)"
    ObservationEvent ||--o| BlobAccessDescriptor : "may have (ImageReferencePath = BlobPath)"
